# todo-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  configuration.yml  pyproject.toml
bot/: __main__.py  constants.py
bot/ext/: struct.py
bot/ext/db/: core.py
bot/ext/db/scripts/: setup.sql
bot/ext/tanjun/todo/: __init__.py  constants.py  core.py  scanner.py  struct.py
bot/modules/: todo.py
