[tool.poetry]
name = "bot"
version = "0.1.0"
description = "A basic todo bot for Discord meant to be self-hosted."
authors = ["eeriemyxi <eeriemyxi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hikari = "^2.0.0.dev121"
hikari-tanjun = "^2.17.1"
aiosqlite = "^0.19.0"
aiofile = "^3.8.8"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
black = "^23.10.0"
pre-commit = "^3.5.0"

[tool.ruff]
ignore = [
    "ANN1", "ANN204", "ANN401",
    "A003",
    "D1", "D203", "D213",
    "S105"
]
select = ["A", "ANN", "B", "C4", "C90", "D", "E", "F", "I", "ISC", "INT", "N", "PIE", "PT", "Q", "RET", "RUF", "S", "SIM", "TID", "T20", "UP", "W"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
